# ESP32_Voice_Assistant

./: .gitignore  README.md
.github/workflows/: sync.yaml
esp-code/: esp-code.ino  secrets.example.h
server/: Dockerfile  README.md  main.py  pyproject.toml
